pillar part done

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <main class="bg1">
-        <section class="bd2 bg2">
+        <section class="bd2 bg2 bg3">
             <div class="bd2-description">
                 <p class="bd2-subtitle">Bangladesh 2.0</p>
                 <h1 class="bd2-title">Idea , innovation ,
@@ -29,6 +29,37 @@
             </div>
             <img src="image/hero.png" alt="">
         </section>
+
+        <section class="pillar-sec bg3">
+            <h1 class="pillars-title">Pillars of "Bangladesh 2.0"</h1>
+            <div class="pillars">
+                <div class="pillar">
+                    <img class="pillar-img" src="image/card-icon.png" alt="">
+                    <h4 class="pillar-title">Innovation</h4>
+                    <p class="pillar-description">Innovation drives progress, empowering nations to advance at the same time transform into developed countries.</p>
+                </div>
+
+                <div class="pillar">
+                    <img class="pillar-img" src="image/card-icon.png" alt="">
+                    <h4 class="pillar-title">Sustainability</h4>
+                    <p class="pillar-description">Sustainability ensures growth preserving resources for future genaration while fostering economic development.</p>
+                </div>
+
+                <div class="pillar">
+                    <img class="pillar-img" src="image/card-icon.png" alt="">
+                    <h4 class="pillar-title">Infrastructure</h4>
+                    <p class="pillar-description">Infrastructure forms the backbone of development, enabling connectivity and improved living standards.</p>
+                </div>
+
+                <div class="pillar">
+                    <img class="pillar-img" src="image/card-icon.png" alt="">
+                    <h4 class="pillar-title">Empowerment</h4>
+                    <p class="pillar-description">Empowerment fosters confidence, skills, and opportunities, driving individual growth and societal progress.</p>
+                </div>
+
+            </div>
+        </section>
+        
     </main>
     <footer>
 
