--- a/index.html
+++ b/index.html
@@ -59,7 +59,30 @@
 
             </div>
         </section>
-        
+        <section class="vision-sec">
+            <h1 class="vision-title">The Vision of Future</h1>
+            <p class="vision-info">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <div class="visions">
+                <div class="vision">
+                    <img src="image/card-icon.png" alt="">
+                    <h4 class="vision-name">Digital Transformation</h4>
+                    <p class="vision-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <button class="vbtn">Learn More</button>
+                </div>
+                <div class="vision">
+                    <img src="image/card-icon.png" alt="">
+                    <h4 class="vision-name">Green Energy</h4>
+                    <p class="vision-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p>
+                    <button class="vbtn">Learn More</button>
+                </div>
+                <div class="vision">
+                    <img src="image/card-icon.png" alt="">
+                    <h4 class="vision-name">Modern Infrastructure</h4>
+                    <p class="vision-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <button class="vbtn">Learn More</button>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
