dr yunus challange part completed

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="fira-sans-thin">
+  <body class="fira-sans-regular">
     <header >
       <nav class="bg1">
         <h1>Bangladesh 2.0</h1>
@@ -36,53 +36,59 @@
                 <div class="pillar">
                     <img class="pillar-img" src="image/card-icon.png" alt="">
                     <h4 class="pillar-title">Innovation</h4>
-                    <p class="pillar-description">Innovation drives progress, empowering nations to advance at the same time transform into developed countries.</p>
+                    <p class="pillar-description font">Innovation drives progress, empowering nations to advance at the same time transform into developed countries.</p>
                 </div>
 
                 <div class="pillar">
                     <img class="pillar-img" src="image/card-icon.png" alt="">
                     <h4 class="pillar-title">Sustainability</h4>
-                    <p class="pillar-description">Sustainability ensures growth preserving resources for future genaration while fostering economic development.</p>
+                    <p class="pillar-description font">Sustainability ensures growth preserving resources for future genaration while fostering economic development.</p>
                 </div>
 
                 <div class="pillar">
                     <img class="pillar-img" src="image/card-icon.png" alt="">
                     <h4 class="pillar-title">Infrastructure</h4>
-                    <p class="pillar-description">Infrastructure forms the backbone of development, enabling connectivity and improved living standards.</p>
+                    <p class="pillar-description font">Infrastructure forms the backbone of development, enabling connectivity and improved living standards.</p>
                 </div>
 
                 <div class="pillar">
                     <img class="pillar-img" src="image/card-icon.png" alt="">
                     <h4 class="pillar-title">Empowerment</h4>
-                    <p class="pillar-description">Empowerment fosters confidence, skills, and opportunities, driving individual growth and societal progress.</p>
+                    <p class="pillar-description font">Empowerment fosters confidence, skills, and opportunities, driving individual growth and societal progress.</p>
                 </div>
 
             </div>
         </section>
         <section class="vision-sec bg3">
             <h1 class="vision-title">The Vision of Future</h1>
-            <p class="vision-info">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <p class="vision-info font">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
             <div class="visions">
                 <div class="vision blue">
                     <img src="image/card-icon.png" alt="">
                     <h4 class="vision-name">Digital Transformation</h4>
-                    <p class="vision-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
+                    <p class="vision-description font">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p>
                     <button class="vbtn1">Learn More</button>
                 </div>
                 <div class="vision bg2">
                     <img src="image/card-icon.png" alt="">
                     <h4 class="vision-name">Green Energy</h4>
-                    <p class="vision-description">Investments in solar and wind energy to ensure a sustainable and ecofriendly future.</p>
+                    <p class="vision-description font">Investments in solar and wind energy to ensure a sustainable and ecofriendly future.</p>
                     <button class="vbtn2">Learn More</button>
                 </div>
                 <div class="vision holud">
                     <img src="image/card-icon.png" alt="">
                     <h4 class="vision-name">Modern Infrastructure</h4>
-                    <p class="vision-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
+                    <p class="vision-description font">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p>
                     <button class="vbtn3">Learn More</button>
                 </div>
             </div>
         </section>
+        <section class="yunus bg3">
+            <p class="yunus-description font">Each of us has an enormous potential, and if we are given the opportunity, we can unleash that potential to change our own lives and the world around us. Poverty is not created by the poor; it is created by the systems we build. If we redesign our systems with compassion and inclusion, we can create a world free of poverty and filled with opportunities for all.</p>
+            <h4 class="yunus-name">Dr Muhammad Yunus</h4>
+            <p>Chief Adviser of the People's Republic of Bangladesh</p>
+        </section>
+        
     </main>
     <footer>
 
