opinion section completed

--- a/index.html
+++ b/index.html
@@ -88,7 +88,48 @@
             <h4 class="yunus-name">Dr Muhammad Yunus</h4>
             <p>Chief Adviser of the People's Republic of Bangladesh</p>
         </section>
-        
+        <section class="opinion bg3">
+            <h1 class="section-title">Your Opinion Matters</h1>
+            <div class="qs-opinion">
+                <table class="table">
+                    <tr class="qs-title">
+                        <th class="tleft bg2">Questions</th>
+                        <th class="tright bg2">Select Your Opinion</th>
+                    </tr>
+                    <tr>
+                        <td class="question">Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                        <td class="option">
+                            <select class="option dropdown bg2" name="" id="">
+                                <option value="Agree">Yes, I Agree</option>
+                                <option value="Nutral">Nutral</option>
+                                <option value="Disagree">No, I Disagree</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="question">Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                        <td class="option">
+                            <select class="option dropdown bg2" name="" id="">
+                                <option value="Agree">Yes, I Agree</option>
+                                <option value="Nutral">Nutral</option>
+                                <option value="Disagree">No, I Disagree</option>
+                            </select>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="question">Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                        <td class="option">
+                            <select class="option dropdown bg2" name="" id="">
+                                <option value="Agree">Yes, I Agree</option>
+                                <option value="Nutral">Nutral</option>
+                                <option value="Disagree">No, I Disagree</option>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
