--- a/index.html
+++ b/index.html
@@ -132,9 +132,35 @@
         </section>
         <section class="bg3">
             <h1 class="section-title">Recent News</h1>
-            <p class="section-description font">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+            <p class="section-description font">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
             <div class="news">
-                <img src="image/satelite.png" alt="" class="news-pic">
+                <img class="news-img" src="image/satelite.png" alt="" class="news-pic">
+                <div class="news-description">
+                    <h1 class="news-title">Bangladesh Launches New Satellite</h1>
+                    <img src="image/al-jazeera.png" alt="">
+                    <div class="somoy">
+                        <p class="date font">Date: 11/01/2025</p>
+                        <p class="time font">Time: 10.25 PM</p>
+                    </div>
+                    <p class="news-info font">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn-primary">Read More</button>
+                </div>
+            </div>
+            <div class="news">
+                <div class="news-description">
+                    <h1 class="news-title">Bangladesh Launches New Satellite</h1>
+                    <img src="image/al-jazeera.png" alt="">
+                    <div class="somoy">
+                        <p class="date font">Date: 11/01/2025</p>
+                        <p class="time font">Time: 10.25 PM</p>
+                    </div>
+                    <p class="news-info font">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we, with a certain degree of justification, be able to speak of humankind as civilized</p>
+                    <button class="btn-primary">Read More</button>
+                </div>
+                <img class="news-img" src="image/satelite.png" alt="" class="news-pic">
+            </div>
+            <div class="news">
+                <img class="news-img" src="image/satelite.png" alt="" class="news-pic">
                 <div class="news-description">
                     <h1 class="news-title">Bangladesh Launches New Satellite</h1>
                     <img src="image/al-jazeera.png" alt="">
