completed the donation part and subscribe html

--- a/index.html
+++ b/index.html
@@ -173,6 +173,27 @@
                 </div>
             </div>
         </section>
+        <form class="donate bg3">
+            <h1 class="section-title">Donate Today</h1>
+            <p class="section-description donate-info">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p>
+            <div class="amount">
+                <div class="taka bg-white">100 Taka</div>
+                <div class="taka bg2">200 Taka</div>
+                <div class="taka bg-white">500 Taka</div>
+                <div class="taka bg-white">1000 Taka</div>
+            </div>
+            <input type="text" name="" placeholder="Other Amount (Taka)" id="money"><br>
+            <input class="btn-primary" type="button" value="Done Now">
+        </form>
+        <section class="sub bg2">
+            <div class="subscribe">
+                <h1 class="section-title">Subscribe Newsletter</h1>
+                <p class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+                <input type="email" name="" placeholder="Enter Your Email Here" id="email">
+                <input type="button" value="Subscribe">
+                <p class="font"> We Promise Not To Spam You</p>
+            </div>
+        </section>
     </main>
     <footer>
 
