subscribe part done and footer html done

--- a/index.html
+++ b/index.html
@@ -185,18 +185,24 @@
             <input type="text" name="" placeholder="Other Amount (Taka)" id="money"><br>
             <input class="btn-primary" type="button" value="Done Now">
         </form>
-        <section class="sub bg2">
+        <section class="sub bg2 bg3">
             <div class="subscribe">
                 <h1 class="section-title">Subscribe Newsletter</h1>
                 <p class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
-                <input type="email" name="" placeholder="Enter Your Email Here" id="email">
-                <input type="button" value="Subscribe">
-                <p class="font"> We Promise Not To Spam You</p>
             </div>
+            <div class="submission">
+                <input type="email" name="" placeholder="Enter Your Email Here" id="email">
+                <input class="sub-btn btn-primary" type="button" value="Subscribe">
+            </div>
+            <p class="promise font"> We Promise Not To Spam You</p>
         </section>
     </main>
     <footer>
-
+        <h1 class="section-title">Bangladesh 2.0</h1>
+        <hr>
+        <img src="image/facebook.png" alt="">
+        <img src="image/instagram.png" alt="">
+        <img src="image/x.png" alt="">
     </footer>
   </body>
 </html>
