--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <section class="yunus bg3">
             <p class="yunus-description font">Each of us has an enormous potential, and if we are given the opportunity, we can unleash that potential to change our own lives and the world around us. Poverty is not created by the poor; it is created by the systems we build. If we redesign our systems with compassion and inclusion, we can create a world free of poverty and filled with opportunities for all.</p>
             <h4 class="yunus-name">Dr Muhammad Yunus</h4>
-            <p>Chief Adviser of the People's Republic of Bangladesh</p>
+            <p class="font">Chief Adviser of the People's Republic of Bangladesh</p>
         </section>
         <section class="opinion bg3">
             <h1 class="section-title">Your Opinion Matters</h1>
@@ -198,11 +198,11 @@
         </section>
     </main>
     <footer>
-        <h1 class="section-title">Bangladesh 2.0</h1>
+        <h1 class="ftitle">Bangladesh 2.0</h1>
         <hr>
-        <img src="image/facebook.png" alt="">
-        <img src="image/instagram.png" alt="">
-        <img src="image/x.png" alt="">
+        <img class="fimg" src="image/facebook.png" alt="">
+        <img class="fimg" src="image/instagram.png" alt="">
+        <img class="fimg" src="image/x.png" alt="">
     </footer>
   </body>
 </html>
